--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -13,7 +13,7 @@
     transition: color 0.2s ease;
 
     &:hover {
-      color: $accent;
+      color: $gradient-start;
     }
   }
 
@@ -54,8 +54,8 @@
     font-size: 1rem;
 
     &:hover {
-      background: $accent;
-      color: $primary;
+      background: $gradient-start;
+      color: $white;
     }
   }
 
