--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,4 +1,12 @@
 // Home Page
 .home-services .services-grid {
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-columns: repeat(6, 1fr);
+  gap: 1.25rem;
+
+  @media (max-width: 991px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: 575px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
